--- a/SDStudentPortal/SDStudentPortal/SDStudentPortal.csproj
+++ b/SDStudentPortal/SDStudentPortal/SDStudentPortal.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Controllers\BlogController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\SearchUsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -240,7 +241,7 @@
     <Content Include="Views\UserModels\Delete.cshtml" />
     <Content Include="Views\UserModels\Details.cshtml" />
     <Content Include="Views\UserModels\Edit.cshtml" />
-    <Content Include="Views\UserModels\Index.cshtml" />
+    <Content Include="Views\UserModels\AdminIndex.cshtml" />
     <Content Include="Views\Shared\Date.cshtml" />
     <Content Include="Views\Uploads\Create.cshtml" />
     <Content Include="Views\Uploads\Delete.cshtml" />
@@ -256,10 +257,12 @@
     <Content Include="Views\Blog\Index.cshtml" />
     <Content Include="Views\BlogComments\LoadAllComments.cshtml" />
     <Content Include="Views\Shared\_PartialProfilePage.cshtml" />
+    <Content Include="Views\UserModels\SearchUsers.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="FileURL\" />
+    <Folder Include="Views\SearchUsers\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
