--- a/SDStudentPortal/SDStudentPortal/SDStudentPortal.csproj
+++ b/SDStudentPortal/SDStudentPortal/SDStudentPortal.csproj
@@ -257,6 +257,7 @@
     <Content Include="Views\Blog\Edit.cshtml" />
     <Content Include="Views\Blog\Index.cshtml" />
     <Content Include="Views\BlogComments\LoadAllComments.cshtml" />
+    <Content Include="Views\UserModels\StudentProfile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
