--- a/SDStudentPortal/SDStudentPortal/SDStudentPortal.csproj
+++ b/SDStudentPortal/SDStudentPortal/SDStudentPortal.csproj
@@ -175,7 +175,6 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MyEnum.cs" />
-    <Compile Include="Models\ProjectFile.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Uploads.cs" />
     <Compile Include="Controllers\UploadsController.cs" />
@@ -294,7 +293,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>21332</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
