working on Student profile

--- a/SDStudentPortal/SDStudentPortal/SDStudentPortal.csproj
+++ b/SDStudentPortal/SDStudentPortal/SDStudentPortal.csproj
@@ -176,6 +176,8 @@
     <Compile Include="Models\MyEnum.cs" />
     <Compile Include="Models\ProjectFile.cs" />
     <Compile Include="Models\Project.cs" />
+    <Compile Include="Models\StudentProfile.cs" />
+    <Compile Include="Controllers\StudentProfilesController.cs" />
     <Compile Include="Models\Uploads.cs" />
     <Compile Include="Controllers\UploadsController.cs" />
     <Compile Include="Models\UserModel.cs" />
@@ -320,6 +322,11 @@
     <Content Include="Views\Projects\Index.cshtml" />
     <Content Include="Views\UserModels\SearchUsers.cshtml" />
     <Content Include="Views\UserModels\StudentProfile.cshtml" />
+    <Content Include="Views\StudentProfiles\Create.cshtml" />
+    <Content Include="Views\StudentProfiles\Delete.cshtml" />
+    <Content Include="Views\StudentProfiles\Details.cshtml" />
+    <Content Include="Views\StudentProfiles\Edit.cshtml" />
+    <Content Include="Views\StudentProfiles\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
