--- a/SDStudentPortal/SDStudentPortal/SDStudentPortal.csproj
+++ b/SDStudentPortal/SDStudentPortal/SDStudentPortal.csproj
@@ -240,6 +240,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Custom.css" />
     <Content Include="Content\CustomBootstrap.css" />
+    <Content Include="Content\StyleSheet2.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
